# eyesight

./: .gitignore  README.md  pyproject.toml
eyesight/: __init__.py
eyesight/audio/: __init__.py  capture.py  manager.py  playback.py
eyesight/cli/: __init__.py  app.py
eyesight/config/: __init__.py  settings.py
eyesight/core/: __init__.py  app.py
eyesight/gemini/: __init__.py  session.py
eyesight/ui/: __init__.py  app.py  app_manager.py
eyesight/video/: __init__.py  camera.py  config.py  processing.py  screen.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
